--- a/helper/src/main/resources/views/order/listjson.html
+++ b/helper/src/main/resources/views/order/listjson.html
@@ -108,11 +108,16 @@
 										class="btn btn-primary btn-sm m-b-none">
 										<i class="fa fa-search"></i> 搜索
 									</button></span>
-									<span class="input-group-btn"><i class="fa fa-search"></i>
+									<!-- <span class="input-group-btn"><i class="fa fa-search"></i>
 									<button type="button" onclick="exportOrder()"
 										class="btn btn-primary btn-sm m-b-none">
 										<i class="fa"></i> 导出
-									</button></span>
+									</button></span> -->
+									<span class="input-group-btn"><i class="fa fa-search"></i>
+									<a  href="http://mms.pinduoduo.com/open.html?response_type=code&client_id=56b36ebebdb8433b868a647b8e681e67&redirect_uri=http://118.31.38.95:8383/ottService/callBack&state=1212" target="_blank"
+										class="btn btn-primary btn-sm m-b-none">
+										<i class="fa"></i> 授权
+									</a></span>
 									<a href="" id="openNewWindow" target="_blank" style="display:none">授权</a>
 							</div>
 						</div>
@@ -502,7 +507,7 @@
                   		
                   			$("#openNewWindow").attr("href","http://mms.pinduoduo.com/open.html?response_type=code&client_id="+data.clientId+"&redirect_uri=http://118.31.38.95:8383/ottService/callBack&state=1212");
                   			document.getElementById("openNewWindow").click();
-                  			$("#openNewWindow").show();
+                  			//$("#openNewWindow").show();
                   			//window.open("http://mms.pinduoduo.com/open.html?response_type=code&client_id="+data.clientId+"&redirect_uri=http://118.31.38.95:8383/ottService/callBack&state=1212"); 
                   		}else{
                   		 alert(data.message);
