--- a/helper/src/main/resources/views/quartz/logsList.html
+++ b/helper/src/main/resources/views/quartz/logsList.html
@@ -26,7 +26,7 @@
 <div id="wrapper">
     <!----左侧导航开始----->
     <nav class="navbar-default navbar-static-side" role="navigation">
-       <% include("/include/_sidebar.html",{active:"shop-list"}){} %>
+       <% include("/include/_sidebar.html",{active:"quartz-list"}){} %>
     </nav>
     <!----左侧导航结束----->
 
@@ -62,10 +62,10 @@
         <!--------当前位置----->
         <div class="row  border-bottom white-bg page-heading">
             <div class="col-sm-4">
-                <h2>店铺列表</h2>
+                <h2>任务列表</h2>
                 <ol class="breadcrumb">
                     <li><a href="${ctxPath}/">管理首页</a></li>
-                    <li class="active">店铺列表</li>
+                    <li class="active">任务列表</li>
                 </ol>
             </div>
         </div>
@@ -75,22 +75,26 @@
 
             <div class="ibox-content m-b-sm ibox-content-t border-bottom" id="ibox-content">
                 <div class="row">
-                    <div class="form-group col-md-3">
-                        <a href="${ctxPath}/shop/add" class="btn btn-primary"  data-title="添加店铺">新增店铺 <i class="fa fa-plus"></i></a>
-                    </div>
-                   <!--  <div class="col-md-3 form-group  m-t-xs">
-                        <input type="text" class="input-sm form-control" name="end" value="" placeholder="公司名称、公司简称、联系人、公司地址">
-                    </div> -->
-
-
-                   <!--  <div class="form-group col-md-4 m-t-xs " id="data_5">
-                        <div class="input-daterange input-group" id="datepicker">
-                            <input type="text" class="input-sm form-control" name="start" value="09/07/2015" placeholder="">
-                            <span class="input-group-addon">至</span>
-                            <input type="text" class="input-sm form-control" name="end" value="10/07/2015" placeholder="">
-                            <span class="input-group-btn"><i class="fa fa-search"></i> <button class="btn btn-primary btn-sm m-b-none"><i class="fa fa-search"></i> 搜索</button></span>
-                        </div>
-                    </div> -->
+                   
+                    <form  id="page_form" onkeydown="if(event.keyCode==13)return false;" action="${ctxPath}/quartz/list" method="get">
+						<div class="col-md-3 form-group  m-t-xs">
+							<input type="text" class="input-sm form-control"
+								 name="searchBeanName" value=""
+								placeholder="bean名称">
+						</div>
+						<div class="form-group col-md-4 m-t-xs " id="data_5">
+							<div class="input-daterange input-group">
+									<button 
+										class="btn btn-primary btn-sm m-b-none">
+										<i class="fa fa-search"></i> 搜索
+									</button></span>
+								
+									 <div class="form-group col-md-3">
+                             <a href="${ctxPath}/quartz/add" class="btn btn-primary"  data-title="添加任务">新增任务 <i class="fa fa-plus"></i></a>
+                          </div>
+							</div>
+						</div>
+                   </form>
                 </div>
             </div>
             <div class="row">
@@ -101,21 +105,32 @@
                                 <table class="table table-centerbody table-striped table-condensed text-nowrap" id="editable-sample">
                                     <thead>
                                     <tr>
-                                        <th>店铺名称</th>
-                                        <th>接入码</th>
-                                        <th>接口密码</th>
+                                        <th>bena名称</th>
+                                        <th>方法名称</th>
+                                        <th>参数</th>
+                                        <th>cron表达式</th>
+                                        <th>任务状态</th>
+                                        <th>备注</th>
                                         <th>创建时间</th>
-                                         <th>操作</th>
+                                        <th>操作</th>
                                     </tr>
                                     </thead>
                                     <tbody>
                                     <%for(item in page.list! ){%>
                                     <tr>
-                                        <td>${item.name!}</td>
-                                        <td>${item.ownerId!}</td>
-                                        <td>${item.secret!}</td>
+                                        <td>${item.beanName!}</td>
+                                        <td>${item.methodName!}</td>
+                                        <td>${item.params!}</td>
+                                        <td>${item.cronExpression!}</td>
+                                        <td>${item.status!0==0?'正常':'暂停'}</td>
+                                        <td>${item.remark!}</td>
                                         <td>${item.createTime!,'yyyy-MM-dd'}</td>
-                                        <td><a href="${ctxPath}/shop/add?id=${item.id!}">编辑</a></td>
+                                        <td>
+                                        <a href="${ctxPath}/quartz/add?id=${item.id!}">编辑</a>
+                                        <a href="${ctxPath}/quartz/delete/${item.id!}">删除</a>
+                                        <a href="${ctxPath}/quartz/${item.status!0==0?'pause':'resume'}/${item.id!}">${item.status!0==0?'暂停':'恢复'}</a>
+                                        <a href="${ctxPath}/quartz/run/${item.id!}">立即执行</a>
+                                        </td>
                                     </tr>
                                     <%}%>
                                     
@@ -127,8 +142,8 @@
                                     <div class="col-md-4"><div class="m-t-md">共 ${page.total!} 条</div></div>
                                     <div class="col-md-8 footable-visible">
                                         <ul class="pagination pull-right">
-                                            <li class="footable-page-arrow disabled"><a data-page="prev" href="${ctxPath}/shop/list?pageNum=${page.prePage!0}">上一页</a></li>
-                                            <li class="footable-page-arrow"><a data-page="next" href="${ctxPath}/shop/list?pageNum=${page.nextPage!0}">下一页</a></li>
+                                            <li class="footable-page-arrow disabled"><a data-page="prev" href="${ctxPath}/quartz/list?pageNum=${page.prePage!0}">上一页</a></li>
+                                            <li class="footable-page-arrow"><a data-page="next" href="${ctxPath}/quartz/list?pageNum=${page.nextPage!0}">下一页</a></li>
                                         </ul>
                                     </div>
                                 </div>
