--- a/helper/src/main/resources/views/rolemenus/admin.html
+++ b/helper/src/main/resources/views/rolemenus/admin.html
@@ -29,4 +29,10 @@
 		<span class="menu-text">销量列表</span>
 	</a>
 </li>
+<li ${active== "quartz-list" ? "class='active'" : ""}>
+	<a href="${ctxPath }/quartz/list"> 
+		<i class="icon-dashboard"></i>
+		<span class="menu-text">任务列表</span>
+	</a>
+</li>
 
